# BASIL

./: .gitignore  CMakeLists.txt  README.md  benchmark.cc  benchmark.h  generate.cc  reproduce.md  requirements.txt  util.h
benchmarks/: benchmark_art.h  benchmark_bs.h  benchmark_btree.h  benchmark_ibtree.h  benchmark_scht.h  benchmark_spgm.h  benchmark_srmi_alt.h  benchmark_srs.h  benchmark_srt.h  common.h
benchmarks/meta/: benchmark_meta_scht.h  benchmark_meta_spgm.h  benchmark_meta_srmi_alt.h  benchmark_meta_srs.h
dtl/test/: bitmask_experiments.cpp  bitmask_test.cpp  bitpack_test.cpp  bitset_test.cpp  bloomfilter_blocked_cacheline_test.cpp  bloomfilter_experiments.cpp  bloomfilter_rts_experiments.cpp  bloomfilter_test.cpp  cuckoofilter_test.cpp  div_test.cpp  enumerate_groups_test.cpp  helper.h  knl_experiments.cpp  like_test.cpp  mem_test.cpp  vec_test.cpp
dtl/test/lib/googletest/include/gtest/internal/: gtest-port.h
indexes/analysis-srmi/: .gitignore  example.cpp
indexes/analysis-srmi/experiments/: index_comparison.cpp  rmi_build.cpp  rmi_errors.cpp  rmi_guideline.cpp  rmi_intervals.cpp  rmi_lookup.cpp  rmi_segmentation.cpp
indexes/analysis-srmi/include/srmi/: models.hpp  srmi_robust.hpp  srmi_robust_meta.hpp
indexes/sCHT/: bench.cc  bench_end_to_end.cc  example.cc
indexes/sCHT/include/scht/: builder.h  common.h  mscht.h  mscht_builder.h  scht.h
indexes/sCHT/test/: cht_test.cc
indexes/sPGM-index/: .gitignore  CMakeLists.txt
indexes/sPGM-index/benchmark/: benchmark.cpp
indexes/sPGM-index/c-interface/: cpgm.cpp  cpgm.h
indexes/sPGM-index/c-interface/examples/: example_simple_c  example_updates_c
indexes/sPGM-index/examples/: CMakeLists.txt  mapped.cpp  multidimensional.cpp  multiset.cpp  simple.cpp  updates.cpp
indexes/sPGM-index/include/pgm/: pgm_index_sampling.hpp  pgm_index_sampling_meta.hpp  piecewise_linear_model_sampling.hpp
indexes/sPGM-index/test/: tests.cpp
indexes/srs/: .gitignore  bench.cc  example.cc
indexes/srs/include/srs/: common.h  msRS.h  msRS_builder.h  sRS.h  sRS_builder.h
indexes/stx-btree-0.9/include/stx/: btree.h  btree_map.h  btree_multimap.h  btree_multiset.h  btree_set.h
indexes/stx-btree-0.9/memprofile/: malloc_count.h  memprofile.h
indexes/stx-btree-0.9/wxbtreedemo/: WMain.cpp  WMain.h  WMain_wxg.cpp  WMain_wxg.h  WTreeDrawing.cpp  WTreeDrawing.h
scripts/: common.sh  datasets_list.txt  datasets_run.txt  download.sh  execute_avg.sh  execute_build.sh  execute_perf.sh  execute_sep.sh  execute_tail.sh  generate.sh  prepare.sh
scripts/graphs/: fig10_build_speedup.py  fig11_design_space.py  fig12_13_pareto.py  fig5_dataset.py  fig6_sampling_impact_rmi.py  fig7_sampling_impact_pgm.py  fig8_sampling_impact_rs.py  fig9_sampling_impact_cht.py  tbl2_sampling_impact_rmi.py
scripts/reproduce/: datasets_meta.txt  datasets_speedup.txt  reproduce.sh  reproduce_design_space.sh  reproduce_graph.sh  reproduce_meta.sh  reproduce_pareto_avg.sh  reproduce_pareto_tail.sh  reproduce_speedup.sh
utils/: perf_event.h  pgm_metric.h  tracking_allocator.h
wrappers/: base.h  wrapper_art_primary_lb.h  wrapper_binary_search.h  wrapper_ibtree.h  wrapper_scht.h  wrapper_spgm_index.h  wrapper_srmi_cpp_robust.h  wrapper_srs.h  wrapper_srt.h  wrapper_stx_btree.h
wrappers/meta/: wrapper_meta_scht.h  wrapper_meta_spgm_index.h  wrapper_meta_srmi_cpp_robust.h  wrapper_meta_srs.h
